# hermes-sidecar

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
launchd/: com.hermes-sidecar.plist
sidecar/: cli.py  config.py  daemon.py  kanban.py  stignore.py
sidecar/actions/: notify.py  syncthing.py
sidecar/monitors/: cpu.py  network.py  power.py
systemd/: hermes-sidecar.service
