[project]
name = "hermes-sidecar"
version = "0.1.0"
description = "Sidecar process manager for Hermes Agent — adaptive resource governance for multi-machine parity"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashesh Kaji", email = "ashesh@nousresearch.com" }]
keywords = ["hermes", "syncthing", "sidecar", "process-manager", "resource-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9",
    "click>=8.1",
]

[project.scripts]
hermes-sidecar = "sidecar.cli:main"

[project.urls]
Homepage = "https://github.com/ashesh8500/hermes-sidecar"
Repository = "https://github.com/ashesh8500/hermes-sidecar"
Issues = "https://github.com/ashesh8500/hermes-sidecar/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
